fix save file for intelliJ